--- a/duAnLon/src/main/resources/application.properties
+++ b/duAnLon/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.main.banner-mode=off
 spring.datasource.url=jdbc:mysql://localhost/testjdbc?useSSL=false
-spring.datasource.username=doha23
-spring.datasource.password=123456
+spring.datasource.username=root
+spring.datasource.password=16042002
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=5
